switch to splitted recipe

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ develop-eggs-directory=../../eggs/develop-eggs
 [versions]
 
 [part]
-recipe = minitage.recipe:cmmi
+recipe = minitage.recipe.cmmi
 url = http://www.webdav.org/neon/neon-0.25.5.tar.gz
 md5sum = b5fdb71dd407f0a3de0f267d27c9ab17
 configure-options=
